# robochz-parking-patrol

./: .gitignore  README.md
final-video/: index.html
src/robochz_bringup/: package.xml  setup.cfg  setup.py
src/robochz_bringup/config/: dynamic_car_path.yaml  mapper_params_online_async.yaml  nav2_waffle.yaml  nav2_waffle_mppi.yaml  patrol_waypoints.yaml
src/robochz_bringup/launch/: app.launch.py  app_rulebased.launch.py  sim.launch.py  sim_rulebased.launch.py  slam.launch.py  world.launch.py
src/robochz_bringup/maps/: parking_lot.pgm  parking_lot.yaml
src/robochz_bringup/models/Distribution_Warehouse/: ASSETS.md  model.sdf
src/robochz_bringup/models/target_car/: model.config  model.sdf
src/robochz_bringup/models/target_car/materials/scripts/: plate.material
src/robochz_bringup/models/target_car/meshes/: Car_blue.dae  Car_red.dae  Car_silver.dae  Car_white.dae  Car_yellow.dae
src/robochz_bringup/robochz_bringup/: dynamic_car_mover.py
src/robochz_bringup/scripts/: gen_map_from_world.py  gen_parking_world.py  plot_patrol_path.py
src/robochz_bringup/worlds/: parking_lot.world  warehouse_test.world
src/robochz_description/: package.xml  setup.cfg  setup.py
src/robochz_description/models/robochz_waffle/: model.config  model.sdf
src/robochz_description/urdf/: robochz_waffle.urdf
src/robochz_monitor/: package.xml  setup.cfg  setup.py
src/robochz_monitor/robochz_monitor/: alert_node.py  monitor_node.py
src/robochz_msgs/: CMakeLists.txt  package.xml
src/robochz_msgs/action/: RecognizePlate.action
src/robochz_msgs/msg/: PlateDetection.msg
src/robochz_patrol/: package.xml  setup.cfg  setup.py
src/robochz_patrol/robochz_patrol/: map_odom_calib.py  path_recorder.py  patrol_node.py  patrol_rulebased.py
src/robochz_perception/: package.xml  setup.cfg  setup.py
src/robochz_perception/config/: registered_vehicles.json
src/robochz_perception/robochz_perception/: ocr_worker.py  perception_node.py
