<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robochz_monitor</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dahyun@todo.todo">dahyun</maintainer>
  <license>TODO: License declaration</license>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>          <!-- /patrol_status: Bool -->
  <depend>nav_msgs</depend>          <!-- /patrol_path: Path -->
  <depend>robochz_msgs</depend>
  <exec_depend>python3-pyqt5</exec_depend>   <!-- alert_node GUI -->
  <!-- 음성 알림: espeak-ng (apt 패키지, 한국어 voice 'ko' 지원) -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
